Fix bugs and styling
Note controls (edit, delete) was redirecting back to homepage
Change all new note and new list styling to look the same

--- a/views/notes/edit.erb
+++ b/views/notes/edit.erb
@@ -1,6 +1,6 @@
-<h1>Edit</h1>
+<h1 class="edit-heading">Edit</h1>
 
-  <form action="/notes/<%= note['id'] %>" method="POST">
+  <form class="edit-form" action="/notes/<%= note['id'] %>" method="POST">
     <input type="hidden" name="_method" value="put">
 
     <label>Date: </label>
