--- a/views/notes/new-note.erb
+++ b/views/notes/new-note.erb
@@ -1,14 +1,11 @@
-<h1>New Note</h1>
+<h1 class="new-note-heading">New Note</h1>
 
 <section class="type-selection">
-<a href="/notes/new-note" class="note-type selected">Note</a>
-<a href="/notes/new-list" class="note-type">List</a>
-
-  
-</button>
+  <a href="/notes/new-note" class="note-type selected">Note</a>
+  <a href="/notes/new-list" class="note-type">List</a>
 </section>
 
-<form action="/notes/new-note" method="POST">
+<form class="new-note-form" action="/notes/new-note" method="POST">
   <br>    
   <label>Date: </label>
   <input type="date" name="date">
