--- a/views/temp-notes/new-note.erb
+++ b/views/temp-notes/new-note.erb
@@ -1,4 +1,4 @@
-<h1>New Temporary Note</h1>
+<h1 class="new-note-heading">New Temporary Note</h1>
 
 <section class="type-selection">
 <a href="/temp-notes/new-note" class="note-type selected">Note</a>
@@ -8,7 +8,7 @@
 </button>
 </section>
 
-<form action="/temp-notes/new-note" method="POST">
+<form class="new-note-form" action="/temp-notes/new-note" method="POST">
   <br>    
   <label>Date: </label>
   <input type="date" name="date">
