--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -28,6 +28,7 @@ body {
   background-color: #FFF5F9;
   font-family: 'Lato', Helvetica, sans-serif;
   color: rgb(6, 6, 78);
+  min-height: 100vh;
 }
 
 h1,
@@ -87,6 +88,11 @@ h2 {
 }
 
 /******************* NOTES DASHBOARD *******************/
+.session-heading {
+  font-size: 3rem;
+  margin: 20px 23px;
+}
+
 /* NOTES SECTION */
 .btn-icon{
   height: 15px;
@@ -106,9 +112,10 @@ h2 {
 }
 
 .note {
-  background-color: #fdfdf9;
+  background-color: #fff;
   box-shadow: 2px 2px 5px #b0b0b0;
   height: 300px;
+  margin: auto;
   width: 300px;
 }
 
@@ -142,7 +149,6 @@ h2 {
   white-space: pre-wrap;
 }
 
-
 .note-controls {
   background-color: rgb(241 249 255 / 50%);
   border-top: 1px solid rgb(188 188 205);
@@ -169,7 +175,6 @@ h2 {
   width: 50px;
 }
 
-
 .selected {
   background-color: rgb(255, 66, 142);
   border-radius: 80px;
@@ -190,6 +195,7 @@ textarea {
 .dropdown {
   display: inline-block;
   position: relative;
+  right: -1330px;
 }
 
 .sort-btn {
@@ -203,14 +209,14 @@ textarea {
 
 .dropdown-content {
   background-color: #f1f1f1;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 4px 6px 0px rgb(0 0 0 / 20%);
+  left: -19px;
   position: absolute;
   overflow: auto;
   text-align: center;
+  top: 28px;
   width: 106px;
   z-index: 1;
-  top: 28px;
-  left: -24px;
 }
 
 .sort-list-visible {
@@ -222,6 +228,7 @@ textarea {
   border-radius: 0;
   color: rgb(6, 6, 78);
   display: block;
+  margin: 0;
   padding: 12px 16px;
   width: 100%;
 }
@@ -242,9 +249,26 @@ textarea {
   text-decoration-color: rgb(48 48 131 / 37%);
 }
 
+/******************* EDIT & NEW-NOTE PAGE *******************/
+.edit-heading, .new-note-heading, .new-list-heading {
+  margin: 20px 25px;
+  font-size: 2.5rem;
+}
+
+.edit-form, .new-note-form .new-list-form, .type-selection {
+  margin: 20px 25px;
+}
+
+.edit-form input[type=text] {
+  background-color: white;
+}
+
+
 /******************* FOOTER *******************/
 .footer {
+  bottom: 0px;
   padding: 10px;
+  position: relative;
 }
 .links {
   background-color: #FFF5F9;;
