--- a/views/notes/new-list.erb
+++ b/views/notes/new-list.erb
@@ -1,4 +1,4 @@
-<h1>New List</h1>
+<h1 class="new-list-heading">New List</h1>
 
 <section class="type-selection">
 
@@ -12,7 +12,7 @@
 </button>
 </section>
 
-<form action="/notes/new-list" method="POST">
+<form class="new-list-form"action="/notes/new-list" method="POST">
   <br>    
   <label>Date: </label>
   <input type="date" name="date">
