Updated document name

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
   <script src="/js/calendar.js" type="text/javascript" defer></script>
   <script src="/js/modal.js" type="text/javascript" defer></script>
   
-  <title>Notes App</title>
+  <title>NOTING</title>
 </head>
 
 <body>
